...
            "state" : "translated",
            "value" : "Giros de hoy: %1$@"
          }
        }
      }
    },
    "gifts.wheel.open" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spin"
...
            "state" : "translated",
            "value" : "Lo que puede tocar"
          }
        }
      }
    },
    "wheel.repeat" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Repeat the prize with a video"
...
            "state" : "translated",
            "value" : "¡Te tocó!"
          }
        }
      }
    },
    "wheel.spin.bonus" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Free spin!"
...
            "state" : "translated",
            "value" : "Girar la ruleta"
          }
        }
      }
    },
    "wheel.spin.video" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spin with a video (%1$@ left)"
...
